[package]
name = "bxolotl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# protobuf
prost = { version = "0.9" }

# randomness
rand = { version = "0.8.5" }
rand-07 = { package = "rand", version = "0.7.0" }

#hashing
sha2 = { version = "0.10" }
hmac = { version = "0.12.1" }

# ntru
ntrust = { git = "ssh://git@git.onyxcorp.net/ccf/ntrust.git", branch = "master" }

#448 ec
x448 = { version = "0.6" }
ed448-rust = { git = "https://github.com/reenboog/ed448-rust", branch = "master" }

# aes_cbc deps
cipher = { version = "0.4.2", features = ["block-padding", "alloc"] }
aes = { version = "0.8.1" }
cbc = { version = "0.1.2" }

# async environment
# TODO: move to ccl-rust
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1" }

[dev-dependencies]
hex = { version = "0.4.3" }

[build-dependencies]
prost-build = { version = "0.9" }